update logo position to relative to ensure visibility during navbar slide animation

--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -17,5 +17,6 @@ header {
     width: 10rem;
     aspect-ratio: 300/96;
     z-index: 10;
+    position: relative;
   }
 }
